--- a/index.html
+++ b/index.html
@@ -1,50 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-imfabra-32x32.png">
-  
   <title>Frontend Mentor | Single Price Grid Component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Join our community
+  <div class="container">
+    <main class="wrapper">
+      <section class="card-info">
+        <div class="card-wrapper">
+          <h2 class="card-info__headline">Join our community</h2>
+          <h3 class="card-info__caption">30-day, hassle-free money back guarantee</h3>
+          <p class="card-info__content">
+            Gain access to our full library of tutorials along with expert code reviews.
+            Perfect for any developers who are serious about honing their skills.
+          </p>
+        </div>
+      </section>
 
-  30-day, hassle-free money back guarantee
+      <section class="card-subscription">
+        <div class="card-wrapper">
+          <h2 class="card-subscription__headline">Monthly Subscription</h2>
+          <h3 class="card-subscription__caption">&dollar;29
+            <span class="card-subscription__caption--text-secondary">per month</span>
+          </h3>
+          <p class="card-subscription__content">Full access for less than &dollar;1 a day</p>
+          <a class="button-primary card-subscription__btn" href="https://www.instagram.com/imfabra/"
+            target="_blank">Sign Up</a>
+        </div>
+      </section>
 
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
-
-  Monthly Subscription
-
-  &dollar;29 per month
-
-  Full access for less than &dollar;1 a day
-
-  Sign Up
-
-  Why Us
-
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+      <section class="card-us">
+        <div class="card-wrapper">
+          <h2 class="card-us__headline">Why Us</h2>
+          <p class="card-us__content">
+            Tutorials by industry experts
+            Peer &amp; expert code review
+            Coding exercises
+            Access to our GitHub repos
+            Community forum
+            Flashcard decks
+            New videos every week
+          </p>
+        </div>
+      </section>
+    </main>
+  </div>
 </body>
+
 </html>
