--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
         <div class="card-wrapper">
           <h2 class="card-us__headline">Why Us</h2>
           <p class="card-us__content">
-            Tutorials by industry experts
-            Peer &amp; expert code review
-            Coding exercises
-            Access to our GitHub repos
-            Community forum
-            Flashcard decks
+            Tutorials by industry experts 
+            Peer &amp; expert code review 
+            Coding exercises <br>
+            Access to our GitHub repos 
+            Community forum <br>
+            Flashcard decks <br>
             New videos every week
           </p>
         </div>
